# g0v0-server

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.client  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DATA_SYNC_GUIDE.md  Dockerfile  Dockerfile-osurx  MIGRATE_GUIDE.md  README.en.md  README.md  alembic.ini  create_sample_data.py  docker-compose-osurx.yml  docker-entrypoint.sh  main.py  osu_api_example.py  osu_lazer_api.code-workspace  pyproject.toml  quick_sync.py  requirements.txt  sync_data.py  test_api.py  test_lazer.py  test_password.py  test_spectator_buffer.py  test_stats_api.py
.devcontainer/: devcontainer.json  docker-compose.yml  nginx.conf  start-dev.sh
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/scripts/: generate_config_doc.py
.github/workflows/: docker-publish-osurx.yml  docker-publish.yml  generate-configuration-doc.yml  pyright.yml  ruff.yml
app/: auth.py  calculator.py  config.py  const.py  database copy.py  database.py  dependencies.py  log.py  models.py  path.py  utils.py
app/achievements/: daily_challenge.py  hush_hush.py  mods.py  osu_combo.py  osu_playcount.py  skill.py  total_hits.py
app/database/: __init__.py  achievement.py  announcement.py  audit_log.py  auth.py  beatmap.py  beatmap_playcounts.py  beatmap_sync.py  beatmap_tags.py  beatmapset.py  beatmapset_ratings.py  best_score.py  best_scores.py  chat.py  client_log.py  counts.py  daily_challenge.py  daily_challenge_model.py  email_verification.py  events.py  failtime.py  favourite_beatmapset.py  item_attempts_count.py  lazer_user.py  legacy.py  matchmaking.py  monthly_playcounts.py  multiplayer_event.py  multiplayer_realtime_room_event.py  notification.py  password_reset.py  playlist_attempts.py  playlist_best_score.py  playlists.py  pp_best_score.py  rank_history.py  rank_request.py  relationship.py  report.py  restriction.py  (+16 more)
app/dependencies/: __init__.py  api_version.py  beatmap_download.py  beatmapset_cache.py  database.py  fetcher.py  geoip.py  param.py  rate_limit.py  scheduler.py  storage.py  user.py  user_agent.py
app/exceptions/: userpage.py
app/fetcher/: __init__.py  _base.py  beatmap.py  beatmap_raw.py  beatmapset.py  osu_dot_direct.py
app/helpers/: asset_proxy_helper.py  geoip_helper.py  rate_limiter.py
app/interfaces/: session_verification.py
app/middleware/: __init__.py  session_verification.py  setup.py  verify_session.py
app/models/: achievement.py  api_me.py  beatmap.py  beatmapset_upload.py  chat.py  extended_auth.py  metadata_hub.py  model.py  mods.py  multiplayer.py  multiplayer_hub.py  multiplayer_resp.py  notification.py  oauth.py  performance.py  playlist.py  room.py  score.py  signalr.py  spectator_hub.py  stats.py  tags.py  totp.py  user.py  userpage.py  v1_user.py
app/router/: __init__.py  auth.py  beatmap.py  beatmap_submission.py  beatmapset.py  fetcher.py  file.py  lio.py  me.py  password_reset_admin.py  redirect.py  relationship.py  room.py  score.py  user.py
app/scheduler/: __init__.py  cache_scheduler.py  database_cleanup_scheduler.py  user_cache_scheduler.py
app/service/: __init__.py  announcement_notification_service.py  asset_proxy_helper.py  asset_proxy_service.py  audio_proxy_service.py  bbcode_service.py  beatmap_cache_service.py  beatmap_download_service.py  beatmapset_cache_service.py  beatmapset_update_service.py  beatmapset_upload_service.py  calculate_all_user_rank.py  client_detection_service.py  client_verification_service.py  create_banchobot.py  daily_challenge.py  database_cleanup_service.py  device_trust_service.py  email_queue.py  email_service.py  email_template_service.py  email_verification_service.py  enhanced_interval_stats.py  geoip_scheduler.py  init_geoip.py  load_achievements.py  login_log_service.py  mailersend_service.py  message_queue.py  message_queue_processor.py  online_status_maintenance.py  online_status_manager.py  optimized_message.py  osu_rx_statistics.py  password_reset_service.py  pp_recalculate.py  pp_variant_service.py  ranking_cache_service.py  recalculate.py  recalculate_banned_beatmap.py  (+11 more)
app/signalr/: exception.py  packet.py  router.py  store.py  utils.py
app/storage/: aws_s3.py  base.py  cloudflare_r2.py  local.py
app/tasks/: __init__.py  beatmapset_update.py  cache.py  calculate_all_user_rank.py  create_banchobot.py  daily_challenge.py  database_cleanup.py  geoip.py  load_achievements.py  osu_rx_statistics.py  recalculate_banned_beatmap.py  recalculate_failed_score.py  recalculation_worker.py  special_statistics.py
docs/: multiplayer_packet_cleanup_guide.md
migrations/: add_lazer_rank_fields.sql  add_missing_fields.sql  base.sql  custom_beatmaps.sql  env.py  sync_legacy_data.sql
migrations/versions/: 1178d0758ebf_beatmapset_support_favourite_count.py  2025-08-10_19cdc9ce4dcb_gamemode_add_osurx_osupp.py  2025-08-10_319e5f841dcf_score_support_pin_score.py  2025-08-10_fdb3822a30ba_init.py  2025-08-11_a8669ba11e96_auth_support_custom_client.py  2025-08-11_aa582c13f905_count_add_replays_watched_counts.py  2025-08-12_198227d190b8_user_add_events.py  2025-08-12_749bb2c2c33a_auth_add_name_description_for_oauth_.py  2025-08-12_b6a304d96a2d_user_support_rank.py  2025-08-13_59c9a0827de0_beatmap_add_indexes.py  2025-08-13_881ac7ca01d5_score_add_maximum_statistics.py  2025-08-13_8bab62d764a5_statistics_remove_level_progress.py  2025-08-13_9aa4f7c06824_playlist_best_scores_remove_foreign_key_.py  2025-08-13_ce29ef0a5674_beatmap_make_max_combo_nullable.py  2025-08-13_f785165a5c0b_convert_event_event_payload_from_str_to_.py  2025-08-14_7e9d5e012d37_auth_add_v1_keys_table.py  2025-08-15_951a2188e691_score_add_rx_for_taiko_catch.py  (+71 more)
migrations_old/: add_lazer_rank_fields.sql  custom_beatmaps.sql  migrations.sql
mysql-conf/: timezone.cnf
nginx/: default.conf
scripts/: generate_config_doc.py  generate_ruleset_attributes.py
static/: README.md  beatmap_tags.json  custom_ruleset_version_hash.json  mods.json
tools/: achievement_images_dl.py  add_daily_challenge.py  fix_user_rank_event.py  recalculate.py
(+79 files in other folders)
